Continuing overhaul of rendering classes and handlers for 1.19.2.